--- a/views/album/album-id.ejs
+++ b/views/album/album-id.ejs
@@ -30,7 +30,7 @@
                                 <span class="songorder d-block pt-4"><%= count %></span>
                                 <% count++ %>
                                 <img class="songimg" src="<%= albumsong.image %>">
-                                <a class="pt-4 text-white text-decoration-none" href="#">
+                                <a class="pt-4 text-white text-decoration-none" href="/song/<%= albumsong.id %>">
                                     <%= albumsong.name %>
                                 </a>
                             </div>
