--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/akjpro/form-anticlear/base.js"></script>
-    <!-- <script src="style.js" defer></script> -->
+    <!-- <script src="/routes/search.js"></script> -->
 </head>
 
 <body>
